# spectrumdata

./: .gitignore  README.md  compose.yaml
api/: Dockerfile  Makefile  openapi.json  pyproject.toml
api/api/: dependencies.py  lifespan.py  main.py  schemas.py  settings.py
parser/: Dockerfile  Makefile  pyproject.toml  setup.cfg
parser/parser/: main.py
