[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
elasticsearch = "^8.14.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
isort = "^5.13.2"
black = "^24.4.2"
autoflake = "^2.3.1"
unify = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
